chrome/browser/ui/views/frame/browser_frame.h
@@ -108,6 +108,7 @@ class BrowserFrame
   void SchedulePaintInRect(const gfx::Rect& rect) override;
   void OnNativeWidgetActivationChanged(bool active) override;
   void OnNativeWidgetWorkspaceChanged() override;
+  void OnNativeThemeUpdated(ui::NativeTheme* observed_theme) override;
 
   // Overridden from views::ContextMenuController:
   void ShowContextMenuForView(views::View* source,
