chrome/browser/ui/views/frame/browser_view.h
@@ -442,7 +442,6 @@ class BrowserView : public BrowserWindow,
   void ChildPreferredSizeChanged(View* child) override;
   void GetAccessibleNodeData(ui::AXNodeData* node_data) override;
   void OnThemeChanged() override;
-  void OnNativeThemeChanged(const ui::NativeTheme* theme) override;
 
   // Overridden from ui::AcceleratorTarget:
   bool AcceleratorPressed(const ui::Accelerator& accelerator) override;
@@ -479,6 +478,9 @@ class BrowserView : public BrowserWindow,
   views::View* GetContentsContainerForTest() { return contents_container_; }
   views::WebView* GetContentsWebViewForTest() { return contents_web_view_; }
   views::WebView* GetDevToolsWebViewForTest() { return devtools_web_view_; }
+
+  // Called by BrowserFrame during theme changes.
+  void NativeThemeUpdated(const ui::NativeTheme* theme);
 
  private:
   // Do not friend BrowserViewLayout. Use the BrowserViewLayoutDelegate
